# phil_debank

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: build_tgbot.yml
telegram_bot/: .dockerignore  Dockerfile  pyproject.toml
telegram_bot/bot/: __main__.py
telegram_bot/bot/src/back_end/: Debank.py  request_api.py
telegram_bot/bot/src/exceptions/back_end/: DebankAPI.py
telegram_bot/bot/src/front_end/commands/: top_reward.py
telegram_bot/bot/src/setup/: bot_setup.py  config.py
